RESOLVED FIXED17954
Canvas arc() with radius of 0 throws exception
https://bugs.webkit.org/show_bug.cgi?id=17954
Summary Canvas arc() with radius of 0 throws exception
John Resig
Reported 2008-03-19 12:08:40 PDT
See the following reduction: http://ejohn.org/files/bugs/arc/ Which throws the following error: Error: INDEX_SIZE_ERR: DOM Exception 1 http://ejohn.org/files/bugs/arc/ (line 5) According to the canvas spec: http://www.whatwg.org/specs/web-apps/current-work/multipage/section-the-canvas.html "Negative values for radius must cause the implementation to raise an INDEX_SIZE_ERR exception." However, that is not the case for arcs with a radius of 0.
Attachments
John Resig
Comment 1 2008-03-19 12:12:47 PDT
For posterity, here's the reduction: <canvas width="100" height="100" id="canvas"></canvas> <script>window.onload = function(){ var c = document.getElementsByTagName("canvas")[0]; var context = c.getContext("2d"); context.arc( 10, 10, 0, 0, 180, false ); };</script>
Mark Rowe (bdash)
Comment 2 2008-03-19 13:11:34 PDT
Oliver Hunt
Comment 3 2008-03-19 15:29:11 PDT
Landed r31162
Note You need to log in before you can comment on or make changes to this bug.