Bug 17954: Canvas arc() with radius of 0 throws exception http://bugs.webkit.org/show_bug.cgi?id=17954

Reviewed by Antti

Simple fix -- use >= instead of > when validating the radius.


Canonical link: https://commits.webkit.org/24841@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31162 268f45cc-cd09-0410-ab3c-d52691b4dbfc